# pytest-markdown-report

./: .envrc  .gitignore  .gitmodules  AGENTS.md  CLAUDE.md  CODE_REVIEW.md  IMPLEMENTATION.md  README.md  design-decisions.md  justfile  pyproject.toml  session.md  test_output_expectations.py
.backup/skills/: execute-tdd.md  plan-design.md  plan-tdd.md  review-updates.md
.claude/: handoff-task.md  settings.json
.claude/agents/: agent-task-baseline.md  design-vet-agent.md  memory-refactor.md  outline-review-agent.md  phase-5-6-composite-flags-task.md  quiet-explore.md  quiet-task.md  refactor.md  remember-task.md  review-tdd-process.md  runbook-outline-review-agent.md  (+6 more)
agents/: learnings.md  session.md
dev/: architecture.md  design-decisions.md
expected/: pytest-default.md  pytest-quiet.md  pytest-verbose.md
plans/: claudeutils-session-log-design.md  implementation-summary.md  phase-1-2-implementation-retrospective.md  phase-1-xpass-and-setup.md  phase-2-skipped-and-resources.md  phase-3-test-coverage.md  phase-5-6-design.md  process-review-phase-1-2.md  r-flag-parity-design.md  r-flag-parity-phase-1-2.md  r-flag-parity-phase-3-4.md  r-flag-parity-phase-5-6.md  r-flag-parity-phase-7-checklist.md  review-analysis-2026-01-12.md  review-updates-recommendations.md  session-2026-01-10-phase-1-2-completion.md  session-2026-01-12-phase3-4.md
scripts/: benchmark.py  check_line_limits.sh
tests/: conftest_debug.py  examples.py  test_edge_cases.py  test_example.py  test_failure_phase_reporting.py  test_output_expectations.py  test_setup_teardown.py  test_xpass.py
(+58 files in other folders)
